Azure DevOps Build ***NO_CI***

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <li class="sidebar-header-2"><a href="#众包怎么做？">众包怎么做？</a></li>
     <li class="sidebar-header-2"><a href="#基本操作">基本操作</a></li>
     <li class="sidebar-header-3"><a href="#罗马字的录入">罗马字的录入</a></li>
+    <li class="sidebar-header-4"><a href="#辅助脚本">辅助脚本</a></li>
     <li class="sidebar-header-3"><a href="#汉字的录入">汉字的录入</a></li>
     <li class="sidebar-header-3"><a href="#繁体字输入法">繁体字输入法</a></li>
     <li class="sidebar-header-3"><a href="#疑难字怎么办？">疑难字怎么办？</a></li>
@@ -57,6 +58,8 @@
 <h3 id="罗马字的录入"><a class="header-link" href="#罗马字的录入"></a>罗马字的录入</h3>
 <p>当你点击罗马字录入框时，一个虚拟键盘会出现，让你选择一些特殊字符。</p>
 <p class="img-container"><img src="images/buc.png" alt=""></p>
+<h4 id="辅助脚本"><a class="header-link" href="#辅助脚本"></a>辅助脚本</h4>
+<p>如果你不习惯用鼠标点击，更习惯使用键盘输入，可以使用 BanLamLang 提供的<a href="assets/helper_BanLamLang.zip">辅助脚本</a>。</p>
 <h3 id="汉字的录入"><a class="header-link" href="#汉字的录入"></a>汉字的录入</h3>
 <p><a name="chinese"></p>
 <p>录入汉字时，我们要如实输入传统汉字（繁体字）。</p>
